kclvm/parser/src/tests/snapshots/kclvm_parser__tests__expr__config_if_expr_3.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(r####\"{\n    if True:\n        if False:\n            a = 1\n}\"####)"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: None,
                        value: Node {
                            node: ConfigIfEntry(
                                ConfigIfEntryExpr {
                                    if_cond: Node {
                                        node: NameConstantLit(
                                            NameConstantLit {
                                                value: True,
                                            },
                                        ),
                                        filename: "",
                                        line: 2,
                                        column: 7,
                                        end_line: 2,
                                        end_column: 11,
                                    },
                                    items: [
                                        Node {
                                            node: ConfigEntry {
                                                key: None,
                                                value: Node {
                                                    node: ConfigIfEntry(
                                                        ConfigIfEntryExpr {
                                                            if_cond: Node {
                                                                node: NameConstantLit(
                                                                    NameConstantLit {
                                                                        value: False,
                                                                    },
                                                                ),
                                                                filename: "",
                                                                line: 3,
                                                                column: 11,
                                                                end_line: 3,
                                                                end_column: 16,
                                                            },
                                                            items: [
                                                                Node {
                                                                    node: ConfigEntry {
                                                                        key: Some(
                                                                            Node {
                                                                                node: Identifier(
                                                                                    Identifier {
                                                                                        names: [
                                                                                            Node {
                                                                                                node: "a",
                                                                                                filename: "",
                                                                                                line: 4,
                                                                                                column: 12,
                                                                                                end_line: 4,
                                                                                                end_column: 13,
                                                                                            },
                                                                                        ],
                                                                                        pkgpath: "",
                                                                                        ctx: Load,
                                                                                    },
                                                                                ),
                                                                                filename: "",
                                                                                line: 4,
                                                                                column: 12,
                                                                                end_line: 4,
                                                                                end_column: 13,
                                                                            },
                                                                        ),
                                                                        value: Node {
                                                                            node: NumberLit(
                                                                                NumberLit {
                                                                                    binary_suffix: None,
                                                                                    value: Int(
                                                                                        1,
                                                                                    ),
                                                                                },
                                                                            ),
                                                                            filename: "",
                                                                            line: 4,
                                                                            column: 16,
                                                                            end_line: 4,
                                                                            end_column: 17,
                                                                        },
                                                                        operation: Override,
                                                                    },
                                                                    filename: "",
                                                                    line: 4,
                                                                    column: 12,
                                                                    end_line: 4,
                                                                    end_column: 17,
                                                                },
                                                            ],
                                                            orelse: None,
                                                        },
                                                    ),
                                                    filename: "",
                                                    line: 3,
                                                    column: 8,
                                                    end_line: 5,
                                                    end_column: 0,
                                                },
                                                operation: Override,
                                            },
                                            filename: "",
                                            line: 3,
                                            column: 8,
                                            end_line: 5,
                                            end_column: 0,
                                        },
                                    ],
                                    orelse: None,
                                },
                            ),
                            filename: "",
                            line: 2,
                            column: 4,
                            end_line: 5,
                            end_column: 0,
                        },
                        operation: Union,
                    },
                    filename: "",
                    line: 2,
                    column: 4,
                    end_line: 5,
                    end_column: 0,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 5,
    end_column: 1,
}
