kclvm/parser/src/tests/snapshots/kclvm_parser__tests__expr__dict_expr.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(r####\"{k0=v0, k1=v1}\"####)"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "k0",
                                                filename: "",
                                                line: 1,
                                                column: 1,
                                                end_line: 1,
                                                end_column: 3,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 1,
                                end_line: 1,
                                end_column: 3,
                            },
                        ),
                        value: Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "v0",
                                            filename: "",
                                            line: 1,
                                            column: 4,
                                            end_line: 1,
                                            end_column: 6,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 4,
                            end_line: 1,
                            end_column: 6,
                        },
                        operation: Override,
                    },
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 6,
                },
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "k1",
                                                filename: "",
                                                line: 1,
                                                column: 8,
                                                end_line: 1,
                                                end_column: 10,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 8,
                                end_line: 1,
                                end_column: 10,
                            },
                        ),
                        value: Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "v1",
                                            filename: "",
                                            line: 1,
                                            column: 11,
                                            end_line: 1,
                                            end_column: 13,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 11,
                            end_line: 1,
                            end_column: 13,
                        },
                        operation: Override,
                    },
                    filename: "",
                    line: 1,
                    column: 8,
                    end_line: 1,
                    end_column: 13,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 14,
}
