kclvm/parser/src/tests/snapshots/kclvm_parser__tests__expr__expr_with_bracket_4.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(r####\"[\"####)"
---
Node {
    node: List(
        ListExpr {
            elts: [],
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 1,
}

